generated/traefik-forward-auth.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-forward-auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth-deploy-c8c48878
  namespace: traefik-forward-auth
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik-forward-auth
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traefik-forward-auth
    spec:
      containers:
        - env:
            - name: DEFAULT_PROVIDER
              value: oidc
            - name: AUTH_HOST
              value: forward-auth.services.mkz.me
            - name: COOKIE_DOMAIN
              value: mkz.me
            - name: SECRET
              valueFrom:
                secretKeyRef:
                  key: secret
                  name: secret
            - name: PROVIDERS_OIDC_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: client_id
                  name: oidc
            - name: PROVIDERS_OIDC_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: client_secret
                  name: oidc
            - name: PROVIDERS_OIDC_ISSUER_URL
              valueFrom:
                secretKeyRef:
                  key: issuer_url
                  name: oidc
          image: thomseddon/traefik-forward-auth:2.2.0
          name: traefik-forward-auth
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth-svc-c8571b62
  namespace: traefik-forward-auth
spec:
  ports:
    - name: http
      port: 4181
  selector:
    app.kubernetes.io/name: traefik-forward-auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: traefik-forward-auth
spec:
  forwardAuth:
    address: http://traefik-forward-auth-svc-c8571b62.traefik-forward-auth:4181
    authRequestHeaders:
      - X-Forwarded-User
      - Cookie
    trustForwardHeader: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth-traefik-forward-auth@kubernetescrd
  name: traefik-forward-auth-ingress-c89d1271
  namespace: traefik-forward-auth
spec:
  rules:
    - host: forward-auth.services.mkz.me
      http:
        paths:
          - backend:
              service:
                name: traefik-forward-auth-svc-c8571b62
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - forward-auth.services.mkz.me
      secretName: secret-tls-www
